[chrome_elf] Big cleanup and removing dependencies that recently crept in.  PART 1.

- Moving all crash related APIs into one place (and out of chrome_elf_main).
- Started to clean up external dependencies - starting with hook_utils.
- Removed dependency on base/win/iat_patch_function.

BUG=631771

Review-Url: https://codereview.chromium.org/2183263003
Cr-Commit-Position: refs/heads/master@{#411982}

Former-commit-id: d2767f8b41a8f7f70bddbd0783a8ef27a9370e58