chrome_elf/blacklist/blacklist_interceptions.cc
@@ -18,7 +18,7 @@
 // base_static (see base/base.gyp) are allowed here.
 #include "base/win/pe_image.h"
 #include "chrome_elf/blacklist/blacklist.h"
-#include "chrome_elf/blacklist/crashpad_helper.h"
+#include "chrome_elf/crash/crash_helper.h"
 #include "sandbox/win/src/internal_types.h"
 #include "sandbox/win/src/nt_internals.h"
 #include "sandbox/win/src/sandbox_nt_util.h"
@@ -262,7 +262,7 @@ BlNtMapViewOfSection(NtMapViewOfSectionFunction orig_MapViewOfSection,
                                    base, zero_bits, commit_size, offset,
                                    view_size, inherit, allocation_type,
                                    protect);
-  } __except(GenerateCrashDump(GetExceptionInformation())) {
+  } __except (elf_crash::GenerateCrashDump(GetExceptionInformation())) {
   }
 
   return ret;
