chrome_elf/chrome_elf_security.cc
@@ -11,6 +11,8 @@
 #include "chrome_elf/chrome_elf_constants.h"
 #include "chrome_elf/nt_registry/nt_registry.h"
 
+namespace elf_security {
+
 void EarlyBrowserSecurity() {
   typedef decltype(SetProcessMitigationPolicy)* SetProcessMitigationPolicyFunc;
 
@@ -47,3 +49,4 @@ void EarlyBrowserSecurity() {
   }
   return;
 }
+}  // namespace elf_security
