chrome_elf/chrome_elf_security.h
@@ -6,7 +6,11 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef CHROME_ELF_CHROME_ELF_SECURITY_H_
 #define CHROME_ELF_CHROME_ELF_SECURITY_H_
 
+namespace elf_security {
+
 // Setup any early browser-process security.
 void EarlyBrowserSecurity();
+
+}  // namespace elf_security
 
 #endif  // CHROME_ELF_CHROME_ELF_SECURITY_H_
